# pilot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude-plugin/: plugin.json
agents/: handoff-generator.md
docs/: architecture.md  budget-usage.md  cli-budget-doctor.md  cli-polish.md  configuration.md  constants.md  day20-post-tool-failure.md  day21-hook-lifecycle.md  handoff-blockers.md  handoff-extractor.md  handoff-markdown.md  handoff-quality-review.md  handoff-schema.md  hook-manifest.md  hooks-session-start.md  post-tool-use.md  pre-tool-use.md  project-structure.md  runtime-safety.md  session-cli.md  session-start-resume.md  signals-base.md  skills.md  sqlite-schema.md  status-command.md  stop-hook-handoff.md  storage-bootstrap.md  storage-repositories.md  storage-schema-v1.md  storage-schema.md  storage-testing.md  storage.md  tokenizer-costs.md  user-prompt-submit-hook.md
hooks/: hooks.json  post_tool_failure.py  post_tool_use.py  pre_tool_use.py  session_end.py  session_start.py  stop.py  user_prompt_submit.py
pilot_core/: __init__.py  action_policy.py  budget.py  cli.py  cli_budget.py  cli_diagnostics.py  cli_legacy.py  cli_ux.py  config.py  constants.py  db_migrations.py  db_schema.py  decision_engine.py  handoff.py  handoff_blockers.py  handoff_extractor.py  handoff_quality.py  health.py  hook_lifecycle.py  paths.py  policy_runtime.py  post_tool_failure.py  post_tool_use.py  pre_tool_policy.py  safety.py  session_cli.py  session_resume.py  state_machine.py  status.py  stop_handoff.py  storage.py  storage_benchmarks.py  token_estimation.py  tokenizer.py  turn_events.py  warnings.py
scripts/: bench_day28_signal_engine.py  bench_day57_sync_hooks.py  benchmark_storage_hot_paths.py  create_week2_issues.ps1  smoke_day21_hooks.py  smoke_day27_signals.py  smoke_day33_signal_registry.py  smoke_day34_replay_fixtures.py  smoke_day35_signal_tuning.py  smoke_day36_health_score.py  smoke_day37_state_machine.py  smoke_day38_state_hysteresis.py  smoke_day39_decision_engine.py  smoke_day40_warning_renderers.py  smoke_day41_action_policy.py  smoke_day42_policy_runtime.py  smoke_day43_handoff_schema.py  smoke_day44_handoff_extractor.py  smoke_day45_handoff_blockers.py  smoke_day46_handoff_markdown.py  smoke_day47_stop_handoff.py  (+11 more)
(+151 files in other folders)
