[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot-cc"
version = "0.1.0"
description = "Autopilot for Claude Code sessions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Alireza Yegane" }
]
keywords = [
  "claude-code",
  "agent",
  "monitoring",
  "handoff",
  "token-budget",
  "developer-tools"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "rich>=13.7",
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "platformdirs>=4.2",
  "tiktoken>=0.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML>=6.0"
]

[project.scripts]
pilot = "pilot_core.cli:app"

[project.urls]
Homepage = "https://github.com/AlirezaYegane/pilot"
Repository = "https://github.com/AlirezaYegane/pilot"
Issues = "https://github.com/AlirezaYegane/pilot/issues"

[tool.setuptools.packages.find]
include = ["pilot_core*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "RUF"
]
ignore = [
  "E501"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = [
  ".venv",
  "build",
  "dist"
]

[[tool.mypy.overrides]]
module = [
  "tiktoken.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["."]
